# pascal-llvm

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  STATUS.md  TESTING.md  compile.sh  dune-project  flake.nix  inline_var  record_local  record_param  record_return  test-all.sh  test.sh  test_inline  var_val_demo
.github/workflows/: ci.yml
docs/: inline-declarations.md
examples/: arithmetic_test.pas  array_of_records.pas  arrays.pas  expr_test.pas  fact_test.pas  factorial.pas  factorial_demo.pas  factorial_working.pas  fib_simple.pas  fibonacci.pas  hello.pas  if_test.pas  inline_val.pas  inline_var.pas  loops_test.pas  nested_record.pas  no_param_call.pas  one_call_expr.pas  pointers.pas  record_assign.pas  record_local.pas  record_param.pas  record_return.pas  record_test_old.pas  records.pas  ret_test.pas  simple.pas  simple_call.pas  simple_func.pas  test1.pas  test2.pas  test_scala_syntax.pas  two_calls.pas  val_violation.pas  var_val_demo.pas
ocaml-impl/: README.md  UPDATES.md  compile.sh  flake.nix  test.sh  test_array_rec  test_assign  test_nested  test_old  test_scala
ocaml-impl/docs/: ci-implementation-summary.md  ci-setup.md
ocaml-impl/src/: ast.ml  codegen.ml  lexer.mll  main.ml  parser.mly  types.ml
rust-impl/: Cargo.toml  README.md  compile.sh  flake.nix  quick-build.sh  test.sh
rust-impl/src/: ast.rs  codegen.rs  lexer.rs  main.rs  parser.rs  types.rs
scala-impl/: .gitignore  README.md  STATUS.md  build.sbt  compile.sh  compile_cli.sh  flake.nix  log.txt  test.sh
src/: ast.ml  codegen.ml  dune  lexer.mll  parser.mly  types.ml
(+5 files in other folders)
