[package]
name = "pascalc"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Pascal-like language compiler built with Rust and Inkwell (LLVM)"
license = "MIT"

[[bin]]
name = "pascalc"
path = "src/main.rs"

[dependencies]
inkwell = { version = "0.4", features = ["llvm18-0"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
